--- a/veoc/templates/veoc/county_dashboard.html
+++ b/veoc/templates/veoc/county_dashboard.html
@@ -146,13 +146,43 @@
       </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-sm-12">
             <div class="well">
                 <div class="panel-heading" style="background-color:#3c8dbc">
                     <h2 class="panel-title" align="center" style="color: #ffffff">. </h2>
                 </div>
                 <div id="covid_container" style="height:300px;width:100%;">
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="well">
+                <div class="panel-heading" style="background-color:#3c8dbc">
+                    <h2 class="panel-title" align="center" style="color: #ffffff">. </h2>
+                </div>
+                <div id="total_piechart" style="height: 300px; width: 100%;">
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="well">
+                <div class="panel-heading" style="background-color:#3c8dbc">
+                    <h2 class="panel-title" align="center" style="color: #ffffff">. </h2>
+                </div>
+                <div id="ongoing_piechart" style="height: 300px; width: 100%;">
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="well">
+                <div class="panel-heading" style="background-color:#3c8dbc">
+                    <h2 class="panel-title" align="center" style="color: #ffffff">. </h2>
+                </div>
+                <div id="completed_piechart" style="height: 300px; width: 100%;">
                 </div>
             </div>
         </div>
@@ -376,84 +406,211 @@
             // valx.push({name: 'None', y: 0, drilldown: 'None'})
         {% endif %}
 
-        console.log(ongoing)
-        console.log(centers)
-        console.log(completed)
-
         // covid-19 Quarantine Centres Bargraph
-        var chart = Highcharts.chart('covid_container', {
+      //   var chart = Highcharts.chart('covid_container', {
+      //
+      //     chart: {
+      //         type: 'column'
+      //     },
+      //
+      //     title: {
+      //         text: 'COVID-19 COUNTY QUARANTINE SITES REPRESENTATION'
+      //     },
+      //
+      //     subtitle: {
+      //         text: 'Hover the graphs to see actial numbers'
+      //     },
+      //
+      //     legend: {
+      //         align: 'right',
+      //         verticalAlign: 'middle',
+      //         layout: 'vertical'
+      //     },
+      //
+      //     xAxis: {
+      //         categories: centers,
+      //         labels: {
+      //             x: -10
+      //         }
+      //     },
+      //
+      //     yAxis: {
+      //         allowDecimals: false,
+      //         title: {
+      //             text: 'Number of Cases'
+      //         }
+      //     },
+      //
+      //     series: [{
+      //         name: 'Ongoing Quarantine Cases',
+      //         data: ongoing
+      //     }, {
+      //         name: 'Completed Quarantine Cases',
+      //         data: completed
+      //     }],
+      //
+      //     responsive: {
+      //         rules: [{
+      //             condition: {
+      //                 maxWidth: 500
+      //             },
+      //             chartOptions: {
+      //                 legend: {
+      //                     align: 'center',
+      //                     verticalAlign: 'bottom',
+      //                     layout: 'horizontal'
+      //                 },
+      //                 yAxis: {
+      //                     labels: {
+      //                         align: 'left',
+      //                         x: 0,
+      //                         y: -5
+      //                     },
+      //                     title: {
+      //                         text: null
+      //                     }
+      //                 },
+      //                 subtitle: {
+      //                     text: null
+      //                 },
+      //                 credits: {
+      //                     enabled: false
+      //                 }
+      //             }
+      //         }]
+      //     }
+      // });
 
+      // gender pie Charts
+      // totals pie chart
+      Highcharts.chart('total_piechart', {
           chart: {
-              type: 'column'
+              plotBackgroundColor: null,
+              plotBorderWidth: null,
+              plotShadow: false,
+              type: 'pie'
           },
-
           title: {
-              text: 'COVID-19 COUNTY QUARANTINE SITES REPRESENTATION'
+              text: 'Total Quarantine based on gender'
           },
-
-          subtitle: {
-              text: 'Hover the graphs to see actial numbers'
+          tooltip: {
+              pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
           },
-
-          legend: {
-              align: 'right',
-              verticalAlign: 'middle',
-              layout: 'vertical'
-          },
-
-          xAxis: {
-              categories: centers,
-              labels: {
-                  x: -10
+          accessibility: {
+              point: {
+                  valueSuffix: '%'
               }
           },
-
-          yAxis: {
-              allowDecimals: false,
-              title: {
-                  text: 'Number of Cases'
-              }
-          },
-
-          series: [{
-              name: 'Ongoing Quarantine Cases',
-              data: ongoing
-          }, {
-              name: 'Completed Quarantine Cases',
-              data: completed
-          }],
-
-          responsive: {
-              rules: [{
-                  condition: {
-                      maxWidth: 500
+          plotOptions: {
+              pie: {
+                  allowPointSelect: true,
+                  cursor: 'pointer',
+                  dataLabels: {
+                      enabled: false
                   },
-                  chartOptions: {
-                      legend: {
-                          align: 'center',
-                          verticalAlign: 'bottom',
-                          layout: 'horizontal'
-                      },
-                      yAxis: {
-                          labels: {
-                              align: 'left',
-                              x: 0,
-                              y: -5
-                          },
-                          title: {
-                              text: null
-                          }
-                      },
-                      subtitle: {
-                          text: null
-                      },
-                      credits: {
-                          enabled: false
-                      }
-                  }
+                  showInLegend: true
+              }
+          },
+          colors: ['#058DC7', '#50B432'],
+          series: [{
+              name: 'Gender',
+              colorByPoint: true,
+              data: [{
+                  name: 'Male - '+ {{ total_pie_male }},
+                  y: {{ total_pie_male }}
+              }, {
+                  name: 'Female - '+ {{ total_pie_female }},
+                  y: {{ total_pie_female }}
               }]
-          }
+          }]
       });
+
+      // ongoing pie chart
+      Highcharts.chart('ongoing_piechart', {
+          chart: {
+              plotBackgroundColor: null,
+              plotBorderWidth: null,
+              plotShadow: false,
+              type: 'pie'
+          },
+          title: {
+              text: 'Ongoing Quarantine based on gender'
+          },
+          tooltip: {
+              pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+          },
+          accessibility: {
+              point: {
+                  valueSuffix: '%'
+              }
+          },
+          plotOptions: {
+              pie: {
+                  allowPointSelect: true,
+                  cursor: 'pointer',
+                  dataLabels: {
+                      enabled: false
+                  },
+                  showInLegend: true
+              }
+          },
+          colors: ['#64E572', '#ED561B'],
+          series: [{
+              name: 'Gender',
+              colorByPoint: true,
+              data: [{
+                  name: 'Male - '+ {{ total_pie_ong_male }},
+                  y: {{ total_pie_ong_male }}
+              }, {
+                  name: 'Female - '+ {{ total_pie_ong_female }},
+                  y: {{ total_pie_ong_female }}
+              }]
+          }]
+      });
+
+      // completed pie chart
+      Highcharts.chart('completed_piechart', {
+          chart: {
+              plotBackgroundColor: null,
+              plotBorderWidth: null,
+              plotShadow: false,
+              type: 'pie'
+          },
+          title: {
+              text: 'Completed Quarantine based on gender'
+          },
+          tooltip: {
+              pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+          },
+          accessibility: {
+              point: {
+                  valueSuffix: '%'
+              }
+          },
+          plotOptions: {
+              pie: {
+                  allowPointSelect: true,
+                  cursor: 'pointer',
+                  dataLabels: {
+                      enabled: false
+                  },
+                  showInLegend: true
+              }
+          },
+          colors: ['#24CBE5', '#DDDF00'],
+          series: [{
+              name: 'Gender',
+              colorByPoint: true,
+              data: [{
+                  name: 'Male - '+ {{ total_pie_comp_male }},
+                  y: {{ total_pie_comp_male }}
+              }, {
+                  name: 'Female - '+ {{ total_pie_comp_female }},
+                  y: {{ total_pie_comp_female }}
+              }]
+          }]
+      });
+
 
     });
 
