--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -158,6 +158,22 @@
               </ul>
           </li>
           <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-edit fa-stack-1x "></i></span>
+                  POINTS OF ENTRY</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/truck_driver_register"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-phone fa-stack-1x "></i></span>Truck Driver Register</a></li>
+                  <li><a href="/truck_quarantine_list"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-code-fork fa-stack-1x "></i></span>Drivers Quarantine List</a></li>
+                  <!-- <li><a href="/accomodation_list"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-code-fork fa-stack-1x "></i></span>Accomodation Details</a></li> -->
+                  <li><a href="/truck_follow_up"><span class="fa-stack fa-lg pull-left"><i
+                          class="fa fa-child fa-stack-1x "></i></span>Quarantine Follow Up</a></li>
+                  <li><a href="/truck_complete_quarantine"><span class="fa-stack fa-lg pull-left"><i
+                      class="fa fa-archive fa-stack-1x "></i></span>Completed Quarantine</a></li>
+              </ul>
+          </li>
+          <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-cloud-download fa-stack-1x "></i></span>
                   DHIS2 DATA</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
@@ -193,15 +209,15 @@
                   <li><a href="/disease_report">Disease report</a></li>
                   <li><a href="/events_report">Events report</a></li>
                   <li><a href="/case_definition">Disease Case Definition</a></li>
+                  <li><a href="/infectious_disease_report">Infectious Disease report</a></li>
+                  <li><a href="/ongoing_tasks">Ongoing Incidents</a></li>
               </ul>
           </li>
           <li>
               <a href="#"><span class="fa-stack fa-lg pull-left">
                 <i class="fa fa-clipboard fa-stack-1x "></i>
-              </span>SPECIAL REPORTS</a>
+              </span>JITENGE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
-                  <li><a href="/infectious_disease_report">Infectious Disease report</a></li>
-                  <li><a href="/ongoing_tasks">Ongoing Incidents</a></li>
                   <li><a href="/quarantine_list">Self Quarantine List</a></li>
                   <li><a href="/follow_up">Ongoing Quarantine</a></li>
                   <li><a href="/complete_quarantine">Completed Quarantine</a></li>
